--- a/west-us/hw-functional-test-dev-gray/namespace.yaml
+++ b/west-us/hw-functional-test-dev-gray/namespace.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: "dev-east-us-ct-functional-test-dev-green" 
+  name: "dev-west-us-hw-functional-test-dev-gray" 
   labels:
     environment: "dev"
-    workspace: "demo-team"
-    workload: "ct"
-    deploymentTarget: "ct-functional-test-dev-green"
+    workspace: "kaizen-team"
+    workload: "hw"
+    deploymentTarget: "hw-functional-test-dev-gray"
     someLabel: some-value
   annotations:
     scheduler.alpha.kubernetes.io/node-selector: environment=dev          
