--- a/west-us/hw-functional-test-dev-gray/reconciler.yaml
+++ b/west-us/hw-functional-test-dev-gray/reconciler.yaml
@@ -1,26 +1,26 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
-  name: dev-green.kaizen-team.hello-world.hw.hw-functional-test-dev-green
+  name: dev-gray.kaizen-team.hello-world.hw.hw-functional-test-dev-gray
   namespace: flux-system
 spec:
   interval: 30s
   url: "https://github.com/eedorenko/hello-world-gitops"
   ref:
-    branch: "dev-green"
+    branch: "dev-gray"
   secretRef:
       name: repo-secret    
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: dev-green.kaizen-team.hello-world.hw.hw-functional-test-dev-green
+  name: dev-gray.kaizen-team.hello-world.hw.hw-functional-test-dev-gray
   namespace: flux-system
 spec:
   interval: 30s
-  targetNamespace: "dev-west-us-hw-functional-test-dev-green"
+  targetNamespace: "dev-west-us-hw-functional-test-dev-gray"
   sourceRef:
     kind: GitRepository
-    name: dev-green.kaizen-team.hello-world.hw.hw-functional-test-dev-green
+    name: dev-gray.kaizen-team.hello-world.hw.hw-functional-test-dev-gray
   path: "./functional-test" 
   prune: true
